<resources>

    <string name="app_name">Restaurant Guide</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">Home Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Restaurant Guide</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Edit Customer Activity -->
    <string name="TitlePage_RegisterRestaurant">Register Restaurant</string>
    <string name="TitlePage_EditRestaurant">Edit Restaurant</string>
    <string name="edit_RestaurantName">Name:</string>
    <string name="register_RestaurantName">Name:</string>
    <string name="edit_RestaurantStreet">Street:</string>
    <string name="register_RestaurantStreet">Street:</string>
    <string name="edit_RestaurantApartment">Apartment/Suite/Unit:</string>
    <string name="register_RestaurantApartment">Apartment/Suite/Unit:</string>
    <string name="edit_RestaurantCity">City:</string>
    <string name="register_RestaurantCity">City:</string>
    <string name="edit_RestaurantState">State:</string>
    <string name="register_RestaurantState">State:</string>
    <string name="edit_RestaurantZip">Zip:</string>
    <string name="register_RestaurantZip">Zip:</string>
    <string name="edit_RestaurantCountry">Country:</string>
    <string name="register_RestaurantCountry">Country:</string>
    <string name="edit_RestaurantDescription">Description:</string>
    <string name="register_RestaurantDescription">Description:</string>
    <string name="edit_ResTags">Tags:</string>
    <string name="register_RestaurantTags">Tags:</string>
    <string name="edit_input_RestaurantName">Tags:</string>
    <string name="register_input_RestaurantName">Tags:</string>
    <string name="hint_Rest_Name">Enter Name</string>
    <string name="hint_Rest_Street">Enter Street</string>
    <string name="hint_Rest_Apartment">Enter Apartment</string>
    <string name="hint_Rest_City">Enter City</string>
    <string name="hint_Rest_Zip">Enter Zip</string>
    <string name="hint_Rest_Country">Enter Country</string>
    <string name="hint_Rest_State">Enter State</string>
    <string name="hint_Rest_Description">Enter Description</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_register">Register</string>




    <string name="RestaurantGuide">Rest_Tags_spinner</string>
    <string-array name="Items">
        <item>#VEGAN</item>
        <item>#FASTFOOD</item>
        <item>#ITALIAN</item>
        <item>#MEXICAN</item>
        <item>#CHINESE</item>
        <item>#INDIAN</item>
        <item>#VIETNAMESE</item>
        <item>#KOREAN</item>
        <item>#JAPANESE</item>
        <item>#THAI</item>
        <item>#ARGENTINIAN</item>
        <item>#VIETNAMESE</item>
        <item>#DINNER</item>
        <item>#BRUNCH</item>
        <item>#BREAKFAST</item>
    </string-array>

    <!-- About Us Activity -->
    <string name="TitlePage_AboutUs">About Us</string>
    <string name="huy">Huy Dam</string>
    <string name="duc">Duc Nguyen</string>
    <string name="al">Allan Martinez</string>
    <string name="member_description">A highly skilled developer mastering MEAN Stack including Angular and React</string>
    <string name="member_description2">A highly skilled developer mastering Cloud Services including AWS</string>
    <string name="member_description3">A highly skilled quality analyst mastering SDLC Testing including Automation</string>

    <!-- Register Restaurant Activity -->


    <string name="restaurant_list">Restaurant List</string>
    <string name="search_keyword">Keyword</string>

    <string name="title_activity_detail">Detail Activity</string>
    <string name="btnRating">Rate</string>
    <string name="facebook_app_id">209218869958061</string>
    <string name="fb_login_protocol_scheme">fb209218869958061</string>
</resources>
