<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/side_nav_bar"
    tools:context=".EditRestaurantActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pageHeader"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:gravity="center"
            android:text="@string/TitlePage_EditRestaurant"
            android:textColor="@android:color/white"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Rest_Country"
                android:layout_width="77dp"
                android:layout_height="32dp"
                android:layout_marginStart="36dp"
                android:layout_marginEnd="8dp"
                android:text="@string/edit_RestaurantCountry"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/fieldRest_Country"
                android:layout_width="196dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="28dp"
                android:ems="10"
                android:hint="@string/hint_Rest_Country"
                android:inputType="text"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Rest_Street"
                android:layout_width="83dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="44dp"
                android:text="@string/edit_RestaurantStreet"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/fieldRest_Street"
                android:layout_width="194dp"
                android:layout_height="39dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="28dp"
                android:ems="10"
                android:hint="@string/hint_Rest_Street"
                android:inputType="text"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="71dp"
                android:layout_height="28dp"
                android:layout_marginStart="36dp"
                android:layout_marginBottom="8dp"
                android:text="Phone:"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/fieldEdit_phone"
                android:layout_width="194dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="Enter phone"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Rest_Zip"
                android:layout_width="41dp"
                android:layout_height="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="8dp"
                android:text="@string/edit_RestaurantZip"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/fieldRest_Zip"
                android:layout_width="197dp"
                android:layout_height="39dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/hint_Rest_Zip"
                android:inputType="text"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Rest_Apt"
                android:layout_width="101dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/edit_RestaurantApartment"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/fieldRest_Apartment"
                android:layout_width="196dp"
                android:layout_height="39dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/hint_Rest_Apartment"
                android:inputType="text"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Rest_Tags"
                android:layout_width="92dp"
                android:layout_height="32dp"
                android:layout_marginStart="36dp"
                android:text="@string/edit_RestaurantTags"
                android:textSize="19sp" />


            <EditText
                android:id="@+id/fieldRes_Tags"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:hint="Tags (separated by comma)"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Rest_City"
                android:layout_width="50dp"
                android:layout_height="32dp"
                android:layout_marginStart="40dp"
                android:text="@string/edit_RestaurantCity"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/fieldRest_City"
                android:layout_width="196dp"
                android:layout_height="39dp"
                android:layout_marginStart="68dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:hint="@string/hint_Rest_City"
                android:inputType="text"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Rest_Name"
                android:layout_width="79dp"
                android:layout_height="32dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="44dp"
                android:text="@string/edit_RestaurantName"
                android:textSize="19sp" />


            <EditText
                android:id="@+id/fieldRest_Name"
                android:layout_width="194dp"
                android:layout_height="39dp"
                android:layout_marginEnd="28dp"
                android:ems="10"
                android:hint="@string/hint_Rest_Name"
                android:inputType="text"
                android:text="" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Rest_State"
                android:layout_width="50dp"
                android:layout_height="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="8dp"
                android:text="@string/edit_RestaurantState"
                android:textSize="19sp" />


            <EditText
                android:id="@+id/fieldRest_State"
                android:layout_width="198dp"
                android:layout_height="39dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="24dp"
                android:ems="10"
                android:hint="@string/hint_Rest_State"
                android:inputType="text"
                android:text="" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/Rest_Description"
                android:layout_width="105dp"
                android:layout_height="32dp"
                android:layout_marginStart="36dp"
                android:text="@string/edit_RestaurantDescription"
                android:textSize="19sp" />

            <EditText
                android:id="@+id/fieldEdit_Description"
                android:layout_width="201dp"
                android:layout_height="104dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:ems="10"
                android:inputType="textMultiLine" />

        </LinearLayout>


        <Button
            android:id="@+id/btn_Edit"
            android:layout_width="372dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="84dp"
            android:layout_marginBottom="4744dp"
            android:text="@string/btn_edit" />
    </LinearLayout>
</ScrollView>